# shy-excel-app

./: .cnb.yml  .gitignore  Cargo.toml  README.md
.github/workflows/: publish-web-sdk.yml  release.yml
.omc/state/: agent-replay-0bce2007-b093-482e-a730-6ec567538b37.jsonl  hud-stdin-cache.json  idle-notif-cooldown.json
.omc/state/sessions/0bce2007-b093-482e-a730-6ec567538b37/: hud-state.json  pre-tool-advisory-throttle.json  subagent-tracking-state.json
crates/shy-export-cli/: Cargo.toml
crates/shy-export-cli/src/: lib.rs  main.rs
crates/shy-export-cli/tests/: http_roundtrip.rs
crates/shy-xlsx-core/: Cargo.toml
crates/shy-xlsx-core/src/: lib.rs
crates/shy-xlsx-core/tests/: perf_merge.rs  progress.rs  roundtrip.rs
crates/xwjd-export-cli/: Cargo.toml
crates/xwjd-export-cli/src/: lib.rs  main.rs
crates/xwjd-export-cli/tests/: http_roundtrip.rs
crates/xwjd-xlsx-core/: Cargo.toml
crates/xwjd-xlsx-core/src/: lib.rs
crates/xwjd-xlsx-core/tests/: perf_merge.rs  roundtrip.rs
docs/: 集成接入指南.md
scripts/: build-macos-dmg.sh  upload-release-asset.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
ui/: index.html  main.js
web-sdk/: .npmrc.example  README.md  package-lock.json  package.json  tsup.config.js
web-sdk/scripts/: copy-types.mjs
web-sdk/src/: index.d.ts  index.js
web-sdk/test/: contract.test.mjs
