# shy-export-client — 专用高速导出客户端（Tauri/Rust），REQ-2026-06-21-001
# workspace：shy-xlsx-core(生成核心库) + 后续 src-tauri(GUI 壳，M-D2)
[workspace]
members = ["crates/shy-xlsx-core", "crates/shy-export-cli", "src-tauri"]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "UNLICENSED"

[workspace.dependencies]
arrow = { version = "53", features = ["ipc_compression"] }
rust_xlsxwriter = "0.95"
ureq = "2"
