[package]
name = "xwjd-export-app"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "本地导出 · 通用高速数据导出客户端（Tauri v2 GUI 壳）"

[lib]
name = "xwjd_export_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-autostart = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
xwjd-export-cli = { path = "../crates/xwjd-export-cli" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
